--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="renderer" content="webkit">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-     <link rel="icon" href="./favicon.ico" type="image/x-icon" />
-    <title>WZ 后台管理框架</title>
+        <!--<link rel="icon" href="./favicon.ico" type="image/x-icon" />-->
+    <title>佑恩堂</title>
     <link href="static/css/style.css" rel="stylesheet">
 </head>
 <body class="app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden ">
